# wan-scail2-gap

./: README.md  __init__.py  gap_scail2_nodes.py  pyproject.toml
example_workflows/: GAP_SCAIL2_long_6_character.json  GAP_SCAIL2_long_multi_character-6preset.json  GAP_SCAIL2_long_multi_character.json  wan22_animate_mix_character_replacement_rtx3090_848x480.json
